--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/jest": "^27.0.1",
     "classnames": "^2.3.1",
     "next": "latest",
     "react": "^17.0.2",
@@ -14,6 +16,7 @@
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.9",
     "@types/node": "15.0.0",
     "@types/react": "17.0.4",
     "@types/react-dom": "17.0.3",
@@ -22,6 +25,7 @@
     "core-js": "^3.17.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "jest": "^27.1.1",
     "typescript": "4.3.2"
   }
 }
