--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/jest": "^27.0.1",
     "classnames": "^2.3.1",
     "next": "latest",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "styled-components": "^5.2.3"
