--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-redux": "^7.2.5",
+    "recharts": "^2.1.2",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.2.3",
-    "uuid": "^8.3.2"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.9",
     "@types/node": "15.0.0",
     "@types/react": "17.0.4",
     "@types/react-dom": "17.0.3",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/styled-components": "5.1.9",
     "@types/uuid": "^8.3.1",
     "babel-plugin-styled-components": "^1.12.0",
@@ -32,6 +34,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "jest": "^27.1.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "typescript": "4.3.2"
   }
 }
