--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "@types/redux-mock-store": "^1.0.3",
     "@types/styled-components": "5.1.9",
     "@types/uuid": "^8.3.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-plugin-styled-components": "^1.12.0",
     "core-js": "^3.17.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "jest": "^27.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-mock-store": "^1.5.4",
