--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "wicg-inert": "^3.1.1"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.9",
